--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "Niharika Shrivastava"
 title_separator          : "-"
 name                     : &name "Niharika Shrivastava"
 description              : &description "I am final year student at IISER Bhopal"
-url                      : https://NiharikaS.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://nebula-22.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "nebula-22/NiharikaS.github.io"
+repository               : "nebula-22/nebula-22.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -23,7 +23,7 @@ repository               : "nebula-22/NiharikaS.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Niharika Shrivastava"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
