--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Niharika Shrivastava"
   pronouns         : # example: "she/her"  
-  bio              : "I am Niharika Shrivastava, a final-year BS–MS Physics student at the Indian Institute of Science Education and Research (IISER) Bhopal, with a strong research background in data-driven astronomy, dark matter phenomenology, and astrophysical data analysis. My research experience spans observational, computational, and theoretical astrophysics — from analyzing MeV gamma-ray emissions in red dwarfs (published in JCAP) to modeling galaxy rotation curves using MCMC techniques and studying triplet extensions of the Standard Model for dark matter candidates."
+  bio              : "I am Niharika Shrivastava, a final-year BS–MS Physics student at the Indian Institute of Science Education and Research (IISER) Bhopal, with a strong research background in data-driven astronomy, dark matter phenomenology, and astrophysical data analysis."
   location         : "Bhopal, Madhya Pradesh"
   employer         : "IISER Bhopal"
   uri              : # URL
