--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Niharika Shrivastava"
 title_separator          : "-"
 name                     : &name "Niharika Shrivastava"
 description              : &description "I am final year student at IISER Bhopal"
-url                      : https://nebula-22.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://niharikashri22.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "niharikashri22/niharikashri22.github.io"
 
