--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@
 #      Markdown formatted page while the second is generated using JSON.
   main:
   - title: "CV"
-    url: /cv/
+    url: https://github.com/niharikashri22/niharikashri22.github.io/blob/master/files/niharika_shrivastava_cv.pdf
     
   - title: "Projects"
     url: /projects/
