--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "IMG-20240608-WA0077.jpeg"
   name             : "Niharika Shrivastava"
   pronouns         : # example: "she/her"  
-  bio              : "I am Niharika Shrivastava, a final-year BS–MS Physics student at the Indian Institute of Science Education and Research (IISER) Bhopal, with a strong research background in data-driven astronomy, dark matter phenomenology, and astrophysical data analysis."
+  bio              : "I am Niharika Shrivastava, a final-year BS–MS Physics student at the Indian Institute of Science Education and Research (IISER) Bhopal."
   location         : "Bhopal, Madhya Pradesh"
   employer         : "IISER Bhopal"
   uri              : # URL
