Add Resources link to navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,9 @@
     
   - title: "Academics"
     url: /academics/
+
+  - title: "Resources"
+    url: /resources/
     
   - title: "Publications"
     url: /publications/
